# synacor-challenge-rust

./: .gitmodules  Cargo.toml
src/: main.rs  maze.rs  opcode.rs  rpg.rs  vm.rs
