[package]
name = "synacor-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
num_enum = "0.7.1"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.52"
