[package]
name = "synacor-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
env_logger = "0.10.1"
itertools = "0.12.0"
lazy-regex = "3.1.0"
log = "0.4.20"
num_enum = "0.7.1"
parse-display = "0.8.2"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.52"
